# dotspb

./: Makefile
go/dotspb/: dec_exec.pb.go  go.mod
protos/: dec_exec.proto
rust/: .gitignore  Cargo.toml  build.rs
rust-protogen/: Cargo.toml
rust-protogen/protos/: dec_exec.proto
rust-protogen/src/: main.rs
rust/src/: dec_exec.rs  lib.rs
rust/src/protos/: dec_exec.rs  mod.rs
