[package]
name = "dotspb"
version = "0.5.0"
edition = "2021"
description = "Protobuf library for the Berkeley DoTS platform, generated using tonic"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
